5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1712_2504.log
== SUBMITION (2019-05-15 06:54:59) 
-- CODE:
qv= int(input("qc:"))
ql= int(input("ql:"))
pv= float(input("pv:"))
pl= float(input("pl:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- EXECUTION TIME:
0.186476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:55:02) 
-- CODE:
qv= int(input("qc:"))
ql= int(input("ql:"))
pv= float(input("pv:"))
pl= float(input("pl:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:55:08) 
-- CODE:
qv= int(input("qc:"))
ql= int(input("ql:"))
pv= float(input("pv:"))
pl= float(input("pl:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:56:04) 
-- CODE:
qv= int(input("qc:"))
ql= int(input("ql:"))
pv= float(input("pv:"))
pl= float(input("pl:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:56:51) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:57:02) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 06:57:05) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- EXECUTION TIME:
0.171846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:57:08) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:58:23) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:59:07) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 06:59:26) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:38:07) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:38:13) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- EXECUTION TIME:
0.146372
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:38:16) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:39:15) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:39:23) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
c=c+1
	
print(c)

-- EXECUTION TIME:
0.154819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:39:25) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
c=c+1
	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c=c+1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:39:54) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c = c +1

	
print(c)

-- EXECUTION TIME:
0.131273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 14, in <module>
    c = c +1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:39:56) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
cont=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c = c +1

	
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    c = c +1
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:40:20) 
-- CODE:
qv= int(input("virus:"))
ql= int(input("leucitos:"))
pv= float(input("p virus:"))
pl= float(input("p leucitos:"))

cqv=qv
cql=ql
c=0

while(cqv*2>cql):
	cql=cql+((cql*pl)/100)
	cqv=cqv+((cqv*pv)/100)
	
	c = c +1

	
print(c)

-- EXECUTION TIME:
0.137367
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
